--- a/MBA/index.html
+++ b/MBA/index.html
@@ -1,4 +1,5 @@
-{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBA Dating</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+    <link rel="stylesheet" href="static/css/styles.css">
 
 </head>
 
 <body>
-    {% include 'base.html' %}
+    
+<header class="main-header">
+    <a class="site-logo" href="">
+        <img src="static/img/x.ico" alt="logo">
+        <p>MBA Dating</p>
+    </a>
+    <nav class="site-nav">
+        <ul class="nav-list">
+            <li class="nav-list-item "><a href="" class="">Home </a></li>
+            <li class="nav-list-item"><a href="#">Community </a></li>
+            <li class="nav-list-item"><a href="#">Blog </a></li>
+            <li class="nav-list-item"><a href="#">Pages </a></li>
+            <li class="nav-list-item"><a href="#">Shop </a></li>
+        </ul>
+    </nav>
+    
+    <div class="header-login">
+        <a href="/login/">Login</a>
+    </div>
+    <button class="head-options" href="#">
+        <img src="static/img/menu.png" alt="Menu">
+    </button>
+</header>
     <section>
         <div class="partners-list">
             <div class="partner-head">
@@ -35,7 +59,7 @@
         <div class="memebers">
             <div class="member-item">
                 <a href="#">
-                    <img src="{% static '/img/person.jpg' %}" alt="Memeber">
+                    <img src="static/img/person.jpg" alt="Memeber">
                     <p class="memeber-name">Shahid Shaikh</p>
                     <p class="age-gender">
                         <span class="age">20</span> <span>Male</span>
@@ -44,7 +68,7 @@
             </div>
             <div class="member-item">
                 <a href="#">
-                    <img src="{% static '/img/person.jpg' %}" alt="Memeber">
+                    <img src="static/img/person.jpg" alt="Memeber">
                     <p class="memeber-name">Shahid Shaikh</p>
                     <p class="age-gender">
                         <span class="age">20</span> <span>Male</span>
@@ -53,7 +77,7 @@
             </div>
             <div class="member-item">
                 <a href="#">
-                    <img src="{% static '/img/person.jpg' %}" alt="Memeber">
+                    <img src="static/img/person.jpg" alt="Memeber">
                     <p class="memeber-name">Shahid Shaikh</p>
                     <p class="age-gender">
                         <span class="age">20</span> <span>Male</span>
@@ -64,7 +88,7 @@
 
             <div class="member-item">
                 <a href="#">
-                    <img src="{% static '/img/person.jpg' %}" alt="Memeber">
+                    <img src="static/img/person.jpg" alt="Memeber">
                     <p class="memeber-name">Shahid Shaikh</p>
                     <p class="age-gender">
                         <span class="age">20</span> <span>Male</span>
@@ -73,7 +97,7 @@
             </div>
             <div class="member-item">
                 <a href="#">
-                    <img src="{% static '/img/person.jpg' %}" alt="Memeber">
+                    <img src="static/img/person.jpg" alt="Memeber">
                     <p class="memeber-name">Shahid Shaikh</p>
                     <p class="age-gender">
                         <span class="age">20</span> <span>Male</span>
@@ -98,19 +122,19 @@
             </div>
             <div class="qualities">
                 <a href="#">
-                    <img src="{% static '/img/like.png' %}">
+                    <img src="static/img/like.png">
                     <h3>Get Inpired</h3>
                     <p>Members profiles are checked everyday. MBA therefore only contains motivated members who
                         really want to be part of the community.</p>
                 </a>
                 <a href="#">
-                    <img src="{% static '/img/smooth.png' %}">
+                    <img src="static/img/smooth.png">
                     <h3>Smooth & Simple Features</h3>
                     <p>MBA has only simple and effective features to help you find exactly what you want.</p>
                 </a>
 
                 <a href="#">
-                    <img src="{% static '/img/locked.png' %}">
+                    <img src="static/img/locked.png">
                     <h3>Your Data are Safe</h3>
                     <p>Your data are secure and will never be offered to third parties companies. Your profile is safe
                         on MBA.</p>
@@ -146,23 +170,23 @@
                 <h2>Follow Us
                 </h2>
                 <a href="#">
-                    <img src="{% static '/img/instagram.png' %}">
+                    <img src="static/img/instagram.png">
                     MBA
                 </a>
                 <a href="#">
-                    <img src="{% static '/img/twitter.png' %}">
+                    <img src="static/img/twitter.png">
                     MBA
                 </a>
                 <a href="#">
-                    <img src="{% static '/img/snapchat.png' %}">
+                    <img src="static/img/snapchat.png">
                     MBA
                 </a>
                 <a href="#">
-                    <img src="{% static '/img/facebook.png' %}">
+                    <img src="static/img/facebook.png">
                     MBA
                 </a>
                 <a href="#">
-                    <img src="{% static '/img/youtube.png' %}">
+                    <img src="static/img/youtube.png">
                     MBA
                 </a>
             </div>
